<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:padding="@dimen/px20"
        android:layout_width="match_parent"
        android:background="@drawable/linerlayout_water_selector"
        android:clickable="true"
        tools:ignore="MissingConstraints"
        android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_order"
            android:textSize="@dimen/px34"
            android:textColor="@color/black"
            android:text="@string/order_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_order_num"
            android:layout_marginLeft="@dimen/px20"
            app:layout_constraintTop_toTopOf="@id/tv_order"
            app:layout_constraintBottom_toBottomOf="@id/tv_order"
            app:layout_constraintLeft_toRightOf="@id/tv_order"
            android:textSize="@dimen/px25"
            android:textColor="@color/blue"
            android:text="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_state1"
            android:layout_marginLeft="45dp"
            app:layout_constraintLeft_toRightOf="@id/tv_order_num"
            android:textSize="@dimen/px26"
            android:textColor="@color/black"
            android:text="@string/state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_state"
            android:layout_marginLeft="@dimen/px110"
            app:layout_constraintLeft_toRightOf="@id/tv_state1"
            android:textSize="@dimen/px25"
            android:textColor="@color/bar_grey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_user1"
            android:layout_marginTop="@dimen/px20"
            android:textSize="@dimen/px26"
            android:textColor="@color/black"
            android:text="@string/user"
            android:layout_width="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_order_num"
            android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_user"
            android:layout_marginLeft="70dp"
            app:layout_constraintTop_toTopOf="@id/tv_user1"
            app:layout_constraintLeft_toRightOf="@id/tv_user1"
            android:textSize="@dimen/px25"
            android:textColor="@color/bar_grey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_supplier1"
            android:layout_marginTop="@dimen/px20"
            app:layout_constraintTop_toBottomOf="@id/tv_user1"
            app:layout_constraintLeft_toLeftOf="@id/tv_user1"
            android:textSize="@dimen/px26"
            android:textColor="@color/black"
            android:text="@string/supplier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_supplier"
            app:layout_constraintTop_toTopOf="@id/tv_supplier1"
            app:layout_constraintLeft_toLeftOf="@id/tv_user"
            android:textSize="@dimen/px25"
            android:textColor="@color/bar_grey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_purchase1"
            android:layout_marginTop="@dimen/px20"
            android:textSize="@dimen/px26"
            android:textColor="@color/black"
            android:text="@string/lump_sum"
            app:layout_constraintLeft_toLeftOf="@id/tv_user1"
            android:layout_width="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_supplier1"
            android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_purchase"
            app:layout_constraintTop_toTopOf="@id/tv_purchase1"
            app:layout_constraintLeft_toLeftOf="@id/tv_user"
            android:textSize="@dimen/px25"
            android:textColor="@color/bar_grey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:textSize="@dimen/px26"
            android:textColor="@color/black"
            android:text="@string/profit"
            app:layout_constraintTop_toTopOf="@id/tv_purchase1"
            app:layout_constraintLeft_toLeftOf="@id/tv_state1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_profit"
            app:layout_constraintTop_toTopOf="@id/tv_purchase1"
            app:layout_constraintLeft_toLeftOf="@id/tv_state"
            android:textSize="@dimen/px25"
            android:textColor="@color/bar_grey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_estimated_delivery_date1"
            android:layout_marginTop="@dimen/px20"
            android:textSize="@dimen/px26"
            android:textColor="@color/black"
            android:text="@string/estimated_delivery_date"
            app:layout_constraintLeft_toLeftOf="@id/tv_user1"
            android:layout_width="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_purchase1"
            android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_estimated_data"
            app:layout_constraintTop_toTopOf="@id/tv_estimated_delivery_date1"
            app:layout_constraintLeft_toLeftOf="@id/tv_user"
            android:textSize="@dimen/px25"
            android:textColor="@color/bar_grey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:textSize="@dimen/px26"
            android:textColor="@color/black"
            android:text="@string/actual_date_of_receipt"
            app:layout_constraintTop_toTopOf="@id/tv_estimated_delivery_date1"
            app:layout_constraintLeft_toLeftOf="@id/tv_state1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_actual_date"
            app:layout_constraintTop_toTopOf="@id/tv_estimated_delivery_date1"
            app:layout_constraintLeft_toLeftOf="@id/tv_state"
            android:textSize="@dimen/px25"
            android:textColor="@color/bar_grey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_estimated_data1"
            android:layout_marginTop="@dimen/px20"
            android:textSize="@dimen/px26"
            android:textColor="@color/black"
            android:text="@string/estimated_delivery_date1"
            app:layout_constraintLeft_toLeftOf="@id/tv_user1"
            android:layout_width="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_estimated_delivery_date1"
            android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_estimated_delivery_date"
            app:layout_constraintTop_toTopOf="@id/tv_estimated_data1"
            app:layout_constraintLeft_toLeftOf="@id/tv_user"
            android:textSize="@dimen/px25"
            android:textColor="@color/bar_grey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:textSize="@dimen/px26"
            android:textColor="@color/black"
            android:text="@string/actual_delivery_date"
            app:layout_constraintTop_toTopOf="@id/tv_estimated_data1"
            app:layout_constraintLeft_toLeftOf="@id/tv_state1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_actual_delivery_date"
            app:layout_constraintTop_toTopOf="@id/tv_estimated_data1"
            app:layout_constraintLeft_toLeftOf="@id/tv_state"
            android:textSize="@dimen/px25"
            android:textColor="@color/bar_grey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>