<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="MissingConstraints">

    <include layout="@layout/include_top" />

    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_order_num"
                    android:text="@string/order_number"
                    android:padding="@dimen/px20"
                    android:textColor="@color/black"
                    android:textSize="@dimen/px26"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_enter"
                    app:layout_constraintTop_toTopOf="@id/tv_order_num"
                    app:layout_constraintBottom_toBottomOf="@id/tv_order_num"
                    app:layout_constraintLeft_toRightOf="@id/tv_order_num"
                    android:layout_marginLeft="20dp"
                    android:hint="@string/enter"
                    android:paddingLeft="@dimen/px20"
                    android:textSize="@dimen/px26"
                    android:minEms="10"
                    android:layout_width="wrap_content"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintWidth_default="wrap"
                    android:layout_height="wrap_content" />

            <androidx.appcompat.widget.AppCompatTextView
                    app:layout_constraintTop_toTopOf="@id/tv_state"
                    app:layout_constraintLeft_toLeftOf="@id/tv_order_num"
                    android:text="@string/state"
                    android:padding="@dimen/px20"
                    android:textColor="@color/black"
                    android:textSize="@dimen/px26"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_state"
                    android:layout_marginTop="@dimen/px10"
                    android:padding="@dimen/px20"
                    android:drawablePadding="@dimen/px10"
                    android:minEms="5"
                    android:gravity="center"
                    app:layout_constraintLeft_toLeftOf="@id/et_enter"
                    app:layout_constraintTop_toBottomOf="@id/et_enter"
                    android:drawableRight="@mipmap/b13"
                    android:hint="@string/choose"
                    android:background="@drawable/tv_border"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            <androidx.appcompat.widget.AppCompatTextView
                    app:layout_constraintTop_toTopOf="@id/tv_harvest_date1"
                    app:layout_constraintLeft_toLeftOf="@id/tv_order_num"
                    android:text="@string/creation_date"
                    android:padding="@dimen/px20"
                    android:textColor="@color/black"
                    android:textSize="@dimen/px26"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_harvest_date1"
                    android:layout_marginTop="@dimen/px10"
                    android:padding="@dimen/px20"
                    android:drawablePadding="@dimen/px10"
                    android:minEms="5"
                    android:gravity="center"
                    app:layout_constraintLeft_toLeftOf="@id/tv_state"
                    app:layout_constraintTop_toBottomOf="@id/tv_state"
                    android:drawableRight="@mipmap/b13"
                    android:hint="@string/choose"
                    android:background="@drawable/tv_border"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            <androidx.appcompat.widget.AppCompatTextView
                    app:layout_constraintTop_toTopOf="@id/tv_choose"
                    app:layout_constraintLeft_toLeftOf="@id/tv_order_num"
                    android:text="@string/user"
                    android:padding="@dimen/px20"
                    android:textColor="@color/black"
                    android:textSize="@dimen/px26"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_choose"
                    android:padding="@dimen/px20"
                    android:drawablePadding="@dimen/px10"
                    android:layout_marginTop="@dimen/px10"
                    android:minEms="5"
                    android:gravity="center"
                    android:drawableRight="@mipmap/b13"
                    android:hint="@string/choose"
                    app:layout_constraintLeft_toLeftOf="@id/et_enter"
                    app:layout_constraintTop_toBottomOf="@id/tv_harvest_date1"
                    android:background="@drawable/tv_border"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_phone"
                    app:layout_constraintLeft_toLeftOf="@id/et_enter"
                    app:layout_constraintTop_toBottomOf="@id/tv_choose"
                    android:hint="@string/enter"
                    android:layout_marginTop="@dimen/px10"
                    android:paddingLeft="@dimen/px20"
                    android:textSize="@dimen/px26"
                    android:minEms="10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            <androidx.appcompat.widget.AppCompatTextView
                    app:layout_constraintTop_toTopOf="@id/et_phone"
                    app:layout_constraintLeft_toLeftOf="@id/tv_order_num"
                    android:text="@string/user_phone"
                    android:padding="@dimen/px20"
                    android:textColor="@color/black"
                    android:textSize="@dimen/px26"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_address"
                    app:layout_constraintLeft_toLeftOf="@id/et_enter"
                    app:layout_constraintTop_toBottomOf="@id/et_phone"
                    android:hint="@string/enter"
                    android:layout_marginTop="@dimen/px10"
                    android:paddingLeft="@dimen/px20"
                    android:textSize="@dimen/px26"
                    android:minEms="10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            <androidx.appcompat.widget.AppCompatTextView
                    app:layout_constraintTop_toTopOf="@id/et_address"
                    app:layout_constraintLeft_toLeftOf="@id/tv_order_num"
                    android:text="@string/user_address"
                    android:padding="@dimen/px20"
                    android:textColor="@color/black"
                    android:textSize="@dimen/px26"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            <View
                    android:id="@+id/view"
                    android:layout_marginTop="@dimen/px20"
                    app:layout_constraintTop_toBottomOf="@id/et_address"
                    style="@style/divider_1" />

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    app:layout_constraintTop_toBottomOf="@id/view"
                    android:background="@color/white"
                    android:layout_width="match_parent"
                    tools:listitem="@layout/i_craete_order"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="false"
                    android:overScrollMode="never" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_add_product"
                android:text="@string/add_product_number"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />

        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_sure"
                android:text="@string/create_order"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>