<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:padding="@dimen/px20"
        android:layout_width="match_parent"
        android:background="@drawable/linerlayout_water_selector"
        android:clickable="true"
        tools:ignore="MissingConstraints"
        android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_order"
            android:textSize="@dimen/px34"
            android:textColor="@color/black"
            android:text="@string/supplier_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_order_num"
            android:layout_marginLeft="@dimen/px20"
            app:layout_constraintTop_toTopOf="@id/tv_order"
            app:layout_constraintBottom_toBottomOf="@id/tv_order"
            app:layout_constraintLeft_toRightOf="@id/tv_order"
            android:textSize="@dimen/px25"
            android:textColor="@color/blue"
            android:text="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_state1"
            android:layout_marginLeft="65dp"
            android:visibility="invisible"
            app:layout_constraintLeft_toRightOf="@id/tv_order_num"
            android:textSize="@dimen/px26"
            android:textColor="@color/black"
            android:text="@string/state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_state"
            android:layout_marginLeft="@dimen/px110"
            app:layout_constraintLeft_toRightOf="@id/tv_state1"
            android:textSize="@dimen/px25"
            android:textColor="@color/gray_999999"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_user1"
            android:layout_marginTop="@dimen/px20"
            android:textSize="@dimen/px26"
            android:textColor="@color/black"
            android:text="@string/supplier"
            android:layout_width="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_order_num"
            android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_user"
            android:layout_marginLeft="30dp"
            app:layout_constraintTop_toTopOf="@id/tv_user1"
            app:layout_constraintBottom_toBottomOf="@id/tv_user1"
            app:layout_constraintLeft_toRightOf="@id/tv_user1"
            android:textSize="@dimen/px25"
            android:textColor="@color/gray_999999"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_supplier1"
            android:layout_marginTop="@dimen/px20"
            app:layout_constraintTop_toBottomOf="@id/tv_user1"
            app:layout_constraintLeft_toLeftOf="@id/tv_user1"
            android:textSize="@dimen/px26"
            android:textColor="@color/black"
            android:text="@string/unit_measurement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_supplier"
            app:layout_constraintTop_toTopOf="@id/tv_supplier1"
            app:layout_constraintBottom_toBottomOf="@id/tv_supplier1"
            app:layout_constraintLeft_toLeftOf="@id/tv_user"
            android:textSize="@dimen/px25"
            android:textColor="@color/gray_999999"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_purchase1"
            android:layout_marginTop="@dimen/px20"
            android:textSize="@dimen/px26"
            android:textColor="@color/black"
            android:text="@string/purchase_price"
            app:layout_constraintLeft_toLeftOf="@id/tv_user1"
            android:layout_width="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_supplier1"
            android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_purchase"
            app:layout_constraintTop_toTopOf="@id/tv_purchase1"
            app:layout_constraintBottom_toBottomOf="@id/tv_purchase1"
            app:layout_constraintLeft_toLeftOf="@id/tv_user"
            android:textSize="@dimen/px25"
            android:textColor="@color/gray_999999"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:textSize="@dimen/px26"
            android:textColor="@color/black"
            android:text="@string/data_up"
            app:layout_constraintTop_toTopOf="@id/tv_purchase1"
            app:layout_constraintBottom_toBottomOf="@id/tv_purchase1"
            app:layout_constraintLeft_toLeftOf="@id/tv_state1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_profit"
            app:layout_constraintTop_toTopOf="@id/tv_purchase1"
            app:layout_constraintBottom_toBottomOf="@id/tv_purchase1"
            app:layout_constraintLeft_toLeftOf="@id/tv_state"
            android:textSize="@dimen/px25"
            android:textColor="@color/gray_999999"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <com.flyco.roundview.RoundTextView
            android:id="@+id/bt_del"
            app:rv_cornerRadius="@dimen/px10"
            app:rv_strokeWidth="1dp"
            app:rv_backgroundColor="@color/white"
            app:rv_strokeColor="@color/blue_00acc1"
            android:gravity="center"
            android:layout_marginTop="@dimen/px20"
            android:padding="@dimen/px10"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_profit"
            android:layout_marginRight="@dimen/px20"
            android:drawableLeft="@mipmap/icon_15"
            android:drawablePadding="@dimen/px10"
            android:text="@string/del"
            android:textSize="@dimen/px24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

</androidx.constraintlayout.widget.ConstraintLayout>